--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,4 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://code.jquery.c
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha38
